# vermicelli

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  application.cpp  application.h  gen_documentation.sh  main.cpp  package.json  status.json  vermicelli_device.cpp  vermicelli_device.h  vermicelli_functions.cpp  vermicelli_functions.h  vermicelli_game_object.h  vermicelli_pipeline.cpp  vermicelli_pipeline.h  vermicelli_swap_chain.cpp  vermicelli_swap_chain.h  vermicelli_window.cpp  vermicelli_window.h
.circleci/: config.yml
libs/: vermicelli_application.h  vermicelli_buffer.h  vermicelli_camera.h  vermicelli_descriptors.h  vermicelli_frame_info.h  vermicelli_functions.h  vermicelli_game_object.h  vermicelli_keyboard_input.h  vermicelli_model.h  vermicelli_pipeline.h  vermicelli_renderer.h  vermicelli_simple_render_system.h  vermicelli_swap_chain.h  vermicelli_window.h
libs/systems/: vermicelli_point_light_system.h  vermicelli_simple_render_system.h
models/: kirb.mtl
models/mtl/: kirb.mtl  new_kirb.mtl
shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
src/: main.cpp  vermicelli_application.cpp  vermicelli_buffer.cpp  vermicelli_camera.cpp  vermicelli_descriptors.cpp  vermicelli_functions.cpp  vermicelli_game_object.cpp  vermicelli_keyboard_input.cpp  vermicelli_model.cpp  vermicelli_pipeline.cpp  vermicelli_renderer.cpp  vermicelli_simple_render_system.cpp  vermicelli_swap_chain.cpp  vermicelli_window.cpp
src/systems/: vermicelli_point_light_system.cpp  vermicelli_simple_render_system.cpp
